codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__safety_buffering_status_without_retry.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
  Giving this request a little extra thought

› 1. Dismiss and keep waiting
  2. Learn more

  No action is required. UnieAI Code will keep waiting, and this menu will close
  when the response is ready.
